--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     }
 }
 
-def media2_version = "1.0.3"
+def media2_version = "1.1.0-alpha01"
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
