--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
     }
 }
 
-def media2_version = "1.1.0-alpha01"
+def media2_version = "1.1.0-rc01"
+def exoplayer_version = '2.12.1'
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -43,7 +44,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.media2:media2-session:$media2_version"
-    implementation "androidx.media2:media2-player:$media2_version"
+//    implementation "androidx.media2:media2-player:$media2_version"
+
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+    implementation "com.google.android.exoplayer:extension-media2:$exoplayer_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
