--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ android {
     }
 }
 
-def media2_version = "1.1.0-rc01"
-def exoplayer_version = '2.12.1'
+def media2_version = "1.1.3"
+def exoplayer_version = '2.14.0'
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
