--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,6 @@ android {
 }
 
 def media2_version = "1.1.3"
-def exoplayer_version = '2.14.0'
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -44,10 +43,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.media2:media2-session:$media2_version"
-//    implementation "androidx.media2:media2-player:$media2_version"
-
-    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
-    implementation "com.google.android.exoplayer:extension-media2:$exoplayer_version"
+    implementation "androidx.media2:media2-player:$media2_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
